# pharmacy-drug-checker

./: .dockerignore  .env.example  .gitignore  AUTHENTICATION_IMPLEMENTATION.md  CHECKLIST.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SPECIFICATION.md  STARTUP.md  create_mhlw_mock.py  create_sample.py  main.py  pyproject.toml  render.yaml  requirements.txt  test_app.py  test_backend.py  test_frontend.py
.github/workflows/: update-mhlw-cache.yml
app/: __init__.py  config.py  excel_matcher.py  mhlw_downloader.py
sample/: pharmacy_sample.xlsx  sample2.xlsx  sample3.xlsx  ~$sample3.xlsx
scripts/: update_mhlw_cache.py
static/: custom.css
templates/: index.html  login.html  test.html
