[project]
name = "pharmacy-drug-checker"
version = "0.1.0"
description = "薬局向け医薬品供給状況チェッカー"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.1.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.4",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
